chore: Fix horizontal scrollbar

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -421,7 +421,6 @@ hr {
 
 main .home-banner.section {
     background: #f2f9f5;
-    margin: 0 calc((100% - 100vw) / 2);
     padding: 24px 10px 0 10px;
 
 	.default-content-wrapper {
